--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <main class="containe">
 
     <form>
-        <h1>Logim animess</h1>
+        <h1>Logim animebr</h1>
 <div class="input-box">
     <input placeholder="ususario">
     <i class="bx bxs-user"></I>
