--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>loguin cs</title> <p>porra</p> <p>pppppppp</p>
-
+    <title>loguin </title> 
 
     <p>breno</p>
 
     <link
-    href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'> <p>porra</p>
+    href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'> 
     
 <a href="#">esqueci  senha</a>
 </div>
